--- a/src/packages/CSS/Controls/LayerSwitcher/GPFlayerSwitcherStyle.css
+++ b/src/packages/CSS/Controls/LayerSwitcher/GPFlayerSwitcherStyle.css
@@ -23,6 +23,11 @@ button[id^=GPshowLayersListPicto][aria-pressed="true"] {
 }
 
 /* Layers list */
+.GPpanelBody {
+  overflow: auto;
+  max-height: inherit;
+}
+
 button[id^=GPlayerInfoClose] {
   background-position: -2px center;
   background-repeat: no-repeat;
